// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component renders a disabled radio 1`] = `
.sx2kwe7 {
  -webkit-appearance: none;
  appearance: none;
  background-color: transparent;
  padding: 0;
  border-radius: 50%;
  border-color: var(--colors-secondary300);
  border-width: 2px;
  border-style: solid;
  width: var(--sizes-0);
  height: var(--sizes-0);
  display: inline-flex;
  align-items: center;
  justify-content: center;
  vertical-align: middle;
}

.sx2kwe7:focus {
  outline: none;
}

:checked + .sx2kwe7 {
  background-color: var(--colors-secondary300);
}

[disabled] + .sx2kwe7 {
  background-color: var(--colors-tonal600);
  border: 2px solid var(--colors-tonal600);
}

.sx2kzeq {
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: white;
}

<div>
  <div
    class="sx03kze"
    data-radix-radio-group=""
    role="radiogroup"
  >
    <input
      disabled=""
      hidden=""
      type="radio"
      value="value"
    />
    <button
      aria-checked="false"
      aria-label="disabled indicator"
      class="sx2kwe7"
      data-disabled=""
      data-radix-radio-group-item=""
      data-state="unchecked"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
      value="value"
    />
  </div>
</div>
`;

exports[`Radio component renders a radio 1`] = `
.sx2kwe7 {
  -webkit-appearance: none;
  appearance: none;
  background-color: transparent;
  padding: 0;
  border-radius: 50%;
  border-color: var(--colors-secondary300);
  border-width: 2px;
  border-style: solid;
  width: var(--sizes-0);
  height: var(--sizes-0);
  display: inline-flex;
  align-items: center;
  justify-content: center;
  vertical-align: middle;
}

.sx2kwe7:focus {
  outline: none;
}

:checked + .sx2kwe7 {
  background-color: var(--colors-secondary300);
}

[disabled] + .sx2kwe7 {
  background-color: var(--colors-tonal600);
  border: 2px solid var(--colors-tonal600);
}

.sx2kzeq {
  width: 8px;
  height: 8px;
  border-radius: 50%;
  background-color: white;
}

<div>
  <div
    class="sx03kze"
    data-radix-radio-group=""
    role="radiogroup"
  >
    <input
      hidden=""
      type="radio"
      value="value"
    />
    <button
      aria-checked="false"
      aria-label="indicator"
      class="sx2kwe7"
      data-radix-radio-group-item=""
      data-radix-roving-focus-group-1-item=""
      data-state="unchecked"
      role="radio"
      tabindex="0"
      type="button"
      value="value"
    />
  </div>
</div>
`;
